# iso2god.app

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: build.yml
src/iso2god/: __main__.py  app.py
src/rust/: lib.rs
